tests/fixtures/invalid/missing_copyright_author.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <metadata>
    <copyright>
      <year>2023</year>
      <license>MIT</license>
    </copyright>
  </metadata>
</gpx>
